src/test/deca/syntax/valid/LE/return.deca
// Historique:
//    cree le 19/01/2022

class C1 {
    int a ;

    int meth1 (){
        return 4 ;
    }
}

{
    C1 varibale = new C1() ;
    int g = varibale.meth1() ;
}